menu items  slow css work :S

--- a/index.html
+++ b/index.html
@@ -32,24 +32,38 @@
   </head>
 
   <body>
-    <div id="menu">
-        <div id="menu-options" class="menu-div">
-            <!--
-            <button class="menuButton" >
-                <i class="fa fa-bars"></i>
-            </button>
-            -->
+    <nav id="menu">
+        <div id="menu-options" class="menu-toggle">
+            <div class="toggle">
+                <button class="menuButton">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="options">
+                <ul>
+                    <li><a href="#home">New Route</a></li>
+                    <li><a href="#news">Delete Route</a></li>
+                </ul>
+            </div>
         </div>
+
         <div id="menu-title" class="menu-div">
+            <h3>1:00</h3>
         </div>
-        <div id="menu-profile" class="menu-div">
-            <!--
-            <a href="#/beers" id="beerLink">
-                <span>Beers</span>
-            </a>
-        -->
+
+        <div id="menu-profile" class="menu-toggle">
+            <div class="toggle">
+                <button class="menuButton">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="profile">
+
+                <h4>Name</h4>
+                <h4>ICON</h4>
+            </div>
         </div>
-    </div>
+    </nav>
 
 
   <div ng-app='main'>
