--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="options">
                 <ul>
                     <li><a href="#home">New Route</a></li>
-                    <li><a href="#news">Delete Route</a></li>
+                    <li id="delete-route"><a href="#news">Delete Route</a></li>
                 </ul>
             </div>
         </div>
