--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!--controllers-->
     <script type="text/javascript" src="assets/js/controllers/mainController.js"></script>
+    <script type="text/javascript" src="assets/js/controllers/startController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/listController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/trailController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/locationController.js"></script>
@@ -60,7 +61,6 @@
                     </button>
                 </div>
                 <div class="profile">
-
                     <h4>Name</h4>
                     <h4>ICON</h4>
                 </div>
