--- a/assets/pages/start.html
+++ b/assets/pages/start.html
@@ -1,4 +1,13 @@
-<div start-page>
-
-
+<div id="start-page">
+	<div id="start-options">
+		<h2>Sort by:</h2>
+			<div class="start-option">
+				<button></button>
+				<h4>Catalogue</h4>
+			</div>
+			<div class="start-option">
+				<button></button>
+				<h4>Location</h4>
+			</div>
+	</div>
 </div>
