add and remove options window

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             <h2>Sort by:</h2>
             <div class="options">
                 <div class="option">
-                    <button></button>
+                    <button href="#/list"></button>
                     <h4>Catalogue</h4>
                 </div>
                 <div class="option">
-                    <button></button>
+                    <button href="#/location"></button>
                     <h4>Location</h4>
                 </div>
             </div>
