--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" href="assets/css/all.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/start.css" />
     <link rel="stylesheet" href="assets/css/list.css" />
     <link rel="stylesheet" href="assets/css/trails.css" />
     <link rel="stylesheet" href="assets/css/location.css" />
@@ -32,7 +31,6 @@
 
     <!--controllers-->
     <script type="text/javascript" src="assets/js/controllers/mainController.js"></script>
-    <script type="text/javascript" src="assets/js/controllers/startController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/listController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/trailController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/locationController.js"></script>
@@ -57,7 +55,7 @@
                 <div class="options">
                     <ul>
                         <li id="new-route"><a ng-click="newRoute()">New Route</a></li>
-                        <li id="delete-route"><a ng-click="deleteRoute()">Delete Route</a></li>
+                        <li id="delete-route" class="hidden"><a ng-click="deleteRoute()">Delete Route</a></li>
                     </ul>
                 </div>
             </div>
@@ -77,17 +75,15 @@
     </nav>
 
     <div id="start-page" class="popup-page hidden">
-        <div id="start-options">
-            <h2>Sort by:</h2>
-                <div class="start-option">
-                    <button></button>
-                    <h4>Catalogue</h4>
-                </div>
-                <div class="start-option">
-                    <button></button>
-                    <h4>Location</h4>
-                </div>
-        </div>
+        <h2>Set Profile</h2>
+
+        <label id="name">
+            <input type="text"/>
+        </label>
+
+        <div class="option">
+            <button href="#/list">Done</button>
+         </div>
     </div>
 
     <div id="type-overlay" class="overlay hidden">
