--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
   </head>
 
   <body>
-<!--
     <nav id="menu">
 
         <div id="menu-bar">
@@ -66,21 +65,22 @@
                     </ul>
                 </div>
             </div>
+        </div>
 
-            <div id="menu-profile" class="menu-toggle">
-                <div class="toggle">
-                    <button class="menuButton">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                </div>
-                <div class="profile">
-                    <h4>Name</h4>
-                    <h4>ICON</h4>
-                </div>
+        <div class="toggle" id="toggle-profile">
+                <button class="menuButton">
+                    <i class="fa fa-bars"></i>
+                </button>
+        </div>
+
+        <div id="menu-profile" class="menu-toggle">
+            <div class="profile">
+                <h4>Name</h4>
+                <h4>ICON</h4>
             </div>
         </div>
     </nav>
--->
+
     <div id="vancouverMap" >
         <div class="map-container">
             <div id = "map" style="width: 100%;height: 100%"></div>
