--- a/index.html
+++ b/index.html
@@ -43,16 +43,23 @@
   </head>
 
   <body>
+
+    <div ng-app='main' id="pages">
+        <div ng-view></div>
+    <div> 
+
     <nav id="menu">
 
-        <div id="menu-bar">
-            <div id="menu-title" class="menu-div">
+        <div id="menu-bar" class="menu-component">
+            <div id="menu-title">
                 <h3>1:00</h3>
             </div>
         </div>
 
-        <div class="overlay">
-            <div id="menu-options" class="menu-toggle">
+        <div id="options">
+            <div class="catch menu-component hidden"></div>
+
+            <div id="menu-options" class="menu-toggle menu-component">
                 <div class="toggle">
                     <button class="menuButton">
                         <i class="fa fa-bars"></i>
@@ -65,21 +72,22 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> <!-- end of options -->
 
-        <div class="toggle" id="toggle-profile">
+        <div id="profile">
+            <div id="menu-profile" class="menu-toggle menu-component">
+                <div class="profile">
+                    <h4>Name</h4>
+                    <h4>ICON</h4>
+                </div>
+            </div>
+            <div id="toggle-profile" class="toggle menu-component">
                 <button class="menuButton">
                     <i class="fa fa-bars"></i>
                 </button>
-        </div>
-
-        <div id="menu-profile" class="menu-toggle">
-            <div class="profile">
-                <h4>Name</h4>
-                <h4>ICON</h4>
             </div>
-        </div>
-    </nav>
+        </div> <!-- end of profile -->
+    </nav> <!-- end of menu -->
 
     <div id="vancouverMap" >
         <div class="map-container">
@@ -90,16 +98,16 @@
     <div id="start-page" class="popup-page hidden">
         <div id="start-options">
             <h2>Sort by:</h2>
-                <div class="start-option">
-                    <button></button>
-                    <h4>Catalogue</h4>
-                </div>
-                <div class="start-option">
-                    <button></button>
-                    <h4>Location</h4>
-                </div>
+            <div class="start-option">
+                <button></button>
+                <h4>Catalogue</h4>
+            </div>
+            <div class="start-option">
+                <button></button>
+                <h4>Location</h4>
+            </div>
         </div>
-    </div>
+    </div> <!-- end of start page -->
 
     <div id="type-overlay" class="overlay hidden">
         <div id="type-page" class="popup-page">
@@ -115,12 +123,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-      <div ng-app='main' id="pages">
-        <div ng-view></div>
-      <div> 
-    
+    </div>    
   </body>
 
 </html>
