profile icon bigger and delay

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
         <div id="profile">
             <div id="menu-profile" class="menu-toggle menu-component">
                 <div class="profile">
-                    <h4>Name</h4>
-                    <h4>ICON</h4>
+                    <div class="title">
+                        <h1>Name</h1>
+                    </div>
+                    <h4>Speed: sdfasdfsadsfdfasdfasdfasdf</h4>
                 </div>
             </div>
             <div id="toggle-profile" class="toggle menu-component">
@@ -112,11 +114,11 @@
             <h2>Sort by:</h2>
             <div class="options">
                 <div class="option">
-                    <button href="#/list"></button>
+                    <button><a href="#/list"></a></button>
                     <h4>Catalogue</h4>
                 </div>
                 <div class="option">
-                    <button href="#/location"></button>
+                    <button><a href="#/location"></a></button>
                     <h4>Location</h4>
                 </div>
             </div>
