--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="assets/css/all.css" />
+    <link rel="stylesheet" href="assets/css/404.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/start.css" />
     <link rel="stylesheet" href="assets/css/list.css" />
@@ -36,6 +37,7 @@
 
     <!--controllers-->
     <script type="text/javascript" src="assets/js/controllers/mainController.js"></script>
+    <script type="text/javascript" src="assets/js/controllers/404Controller.js"></script>
     <script type="text/javascript" src="assets/js/controllers/startController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/listController.js"></script>
     <script type="text/javascript" src="assets/js/controllers/trailController.js"></script>
@@ -43,11 +45,6 @@
   </head>
 
   <body>
-
-    <div ng-app='main' id="pages">
-        <div ng-view></div>
-    <div> 
-
     <nav id="menu">
         <div class="catch menu-component hidden"></div>
 
@@ -80,7 +77,7 @@
                     <div class="title">
                         <h1>Name</h1>
                     </div>
-                    <h4>Speed: sdfasdfsadsfdfasdfasdfasdf</h4>
+                    <h4>Speed: sdfasdfsadsfdfasd<a href="/#/404">fasdfasdf</a></h4>
                 </div>
             </div>
             <div id="toggle-profile" class="toggle menu-component">
@@ -94,6 +91,10 @@
     <div class="map-container">
         <div id = "map" style="width: 100%;height: 100%"></div>
     </div>
+
+    <div ng-app='main' id="pages">
+        <div ng-view></div>
+    <div> 
 
     <div id="start-page" class="popup-page hidden">
         <div id="start-options">
