thanks merge for F***ing everything up :/

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!--bower components -->
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/js/angular-maps.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/hammer.js/hammer.min.js"></script>
     <script type="text/javascript" src="bower_components/velocity/velocity.min.js"></script>
@@ -142,14 +143,12 @@
             <h2>Sort by:</h2>
             <div class="options">
                 <div class="option">
-                    <div class="button">
-                        <a href="#/list"><h4>Catalogue</h4></a>
-                    </div>
+                    <button><a href="#/list"></a></button>
+                    <h4>Catalogue</h4>
                 </div>
                 <div class="option">
-                    <div class="button">
-                        <a href="#/location"><h4>Location</h4></a>
-                    </div>
+                    <button><a href="#/location"></a></button>
+                    <h4>Location</h4>
                 </div>
             </div>
         </div> <!-- end of type page -->
