--- a/index.html
+++ b/index.html
@@ -140,15 +140,17 @@
 
     <div class="catch type hidden">
         <div id="type-page" class="popup-page">
-            <h2>Sort by:</h2>
+           <h2>Sort by:</h2>
             <div class="options">
                 <div class="option">
-                    <button><a href="#/list"></a></button>
-                    <h4>Catalogue</h4>
+                    <div class="button">
+                        <a href="#/list"><h4>Catalogue</h4></a>
+                    </div>
                 </div>
                 <div class="option">
-                    <button><a href="#/location"></a></button>
-                    <h4>Location</h4>
+                    <div class="button">
+                        <a href="#/location"><h4>Location</h4></a>
+                    </div>
                 </div>
             </div>
         </div> <!-- end of type page -->
