back and check on trail page

--- a/assets/pages/trails.html
+++ b/assets/pages/trails.html
@@ -4,4 +4,14 @@
 		<h3>{{type.km}} km</h3>
 		<h3>{{type.hours}} hours</h3>
 	</div>
+
+	<div id="trail-menu">
+		<div class="button-holder" id="holder-x">
+            <button id="x" onclick="window.location.href='#/list'"></button>
+        </div>
+
+		<div class="button-holder" id="holder-check">
+            <button id="check" onclick="window.location.href='#/'"></button>
+        </div>
+	</div>
 </div>
