adding sklad script

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <script src='http://maps.googleapis.com/maps/api/js?sensor=true'></script>
     <script type="text/javascript" src="bower_components/gmaps.js/gmaps.js"></script>
 
+    <!--local storage -->
+    <script src='assets/js/local_storage/sklad.js'></script>
+    <script src='assets/js/local_storage/zepto.js'></script>
+    <script src='assets/js/local_storage/script.js'></script>
+
     <!-- scripts -->
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script type="text/javascript" src="assets/js/map.js"></script>
