--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--local storage -->
     <script src='assets/js/local_storage/sklad.js'></script>
     <script src='assets/js/local_storage/zepto.js'></script>
-    <script src='assets/js/local_storage/script.js'></script>
+    <script src='assets/js/local_storage/local_storage.js'></script>
 
     <!--providers -->
     <script type="text/javascript" src="assets/js/providers/dataProvider.js"></script>
@@ -102,15 +102,13 @@
                 <div class="profile">
                     <div class="title">
                         <!-- <h1>Name</h1> -->
-                        <form id="addname" class="hidden">
-                            User Name:<br>
-                            <input type="text" name="firstname">
-                            <br>
-                        </form>
-
                         <div id="existing-name">
                             <h1>myName</h1>
                         </div>
+
+                        <button class='clear-history'>Clear ALL</button>
+                        <button class='logout'>Change Username</button>
+
                     </div>
                     <h4>Speed: sdfasdfsadsfdfasd</h4>
                     <h4><a href="/#/404">404</a></h4>
