delete and finish current route working

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                 </div>
                 <div class="options">
                     <ul>
-                        <li id="new-route"><a ng-click="newRoute()">New Route</a></li>
-                        <li id="delete-route"><a ng-click="deleteRoute()">Delete Route</a></li>
+                        <li id="new-route"><a>New Route</a></li>
+                        <li class="delete-route"><a>Delete Route</a></li>
+                        <li class="done-route"><a>Done Route</a></li>
                     </ul>
                 </div>
             </div>
