--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                 </div>
                 <div class="options">
                     <ul>
-                        <li id="new-route"><a>New Route</a></li>
-                        <li class="delete-route"><a>Delete Route</a></li>
-                        <li class="done-route"><a>Done Route</a></li>
+                        <li id="new-route" class="options-button"><a>New Route</a></li>
+                        <li class="delete-route options-button"><a>Delete Route</a></li>
+                        <li class="done-route options-button"><a>Done Route</a></li>
                     </ul>
                 </div>
             </div>
