--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- pop up menu for catalogue vs location -->
     <div class="catch type hidden">
         <div id="type-page" class="popup-page">
-           <h2>Sort by:</h2>
+           <h2>SORT BY</h2>
             <div class="options">
                 <div class="option">
                     <div class="button">
