added some icons

--- a/assets/pages/trails.html
+++ b/assets/pages/trails.html
@@ -14,11 +14,11 @@
 
 	<div id="trail-menu">
 		<div class="button-holder" id="holder-x">
-            <button id="x" onclick="window.location.href='#/list'"></button>
+            <button id="x" onclick="window.location.href='#/list'"><i class="fa fa-angle-left"></i></button>
         </div>
 
 		<div class="button-holder" id="holder-check">
-            <button id="check" onclick="window.location.href='#/'"></button>
+            <button id="check" onclick="window.location.href='#/'"><i class="fa fa-street-view"></i></button>
         </div>
 	</div>
 </div>
