--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!--<link rel="shortcut icon" href="pics/homeicon.ico"/> -->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- styles -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="assets/css/all.css" />
