profile icon is pic of trail

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <div id="toggle-profile" class="toggle menu-component">
                 <button class="menuButton">
-                    <i class="fa fa-bars"></i>
+                    <input class="icon trail-icon" type="image" src="assets/imgs/rice.jpg" alt="character-pic"></input>
                 </button>
             </div>
         </div> <!-- end of profile -->
