formatting css of profile page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <h1>myName</h1>
                         </div>
                     </div>
-                    <button class='logout'>Change Username</button>
+                    <button class='logout'>Switch User</button>
                     <ul class='list-of-trails'></ul>
                 </div>
             </div>
