deleting link to the location page

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="option">
                     <div class="button">
-                        <a href="#/location"><h4>Location</h4></a>
+                        <a href="#/404"><h4>Location</h4></a>
                     </div>
                 </div>
             </div>
