--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 </div>
                 <div class="options">
                     <ul>
+                        <li id="home" class="options-button"><a href="#/"><h4>Home</h4></a></li>
                         <li id="new-route" class="options-button"><a>New Route</a></li>
                         <li class="delete-route options-button"><a>Delete Route</a></li>
                         <li class="done-route options-button"><a>Done Route</a></li>
