--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <input type='text' id='name'> <button id='add-name'>Add Name</button>
         </div>
         <div id="start-page-container-m" class="start-page-container">
-            <h3 id="show-the-name">Please wait a moment while the app loads...</h3>
+            <h3 id="show-the-name">Please wait a moment while TrailTracker loads...</h3>
         </div>
         <div id="start-page-container-b" class="start-page-container">
             <button class='clear-history'>Clear ALL</button>
