--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3 id="show-the-name">Please wait a moment while TrailTracker loads...</h3>
         </div>
         <div id="start-page-container-b" class="start-page-container">
-            <button class='clear-history'>Clear ALL</button>
+            <button class='clear-history'>Delete User</button>
             <button class='ok'>OK</button>
         </div>
     </div> <!-- end of start page -->
