--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--local storage -->
     <script src='assets/js/local_storage/sklad.js'></script>
     <script src='assets/js/local_storage/zepto.js'></script>
-    <script src='assets/js/local_storage/local_storage.js'></script>
+    <script src='assets/js/storage.js'></script>
 
     <!--providers -->
     <script type="text/javascript" src="assets/js/providers/dataProvider.js"></script>
